CREATE TABLE customers (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name       VARCHAR(200) NOT NULL,
    email      VARCHAR(200) NOT NULL UNIQUE,
    created_at TIMESTAMP    NOT NULL
);

CREATE TABLE accounts (
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    customer_id    BIGINT       NOT NULL,
    account_number VARCHAR(34)  NOT NULL UNIQUE,
    account_type   VARCHAR(32)  NOT NULL,
    balance_cents  BIGINT       NOT NULL DEFAULT 0,
    currency       VARCHAR(3)   NOT NULL,
    status         VARCHAR(32)  NOT NULL,
    created_at     TIMESTAMP    NOT NULL,
    CONSTRAINT fk_accounts_customer FOREIGN KEY (customer_id) REFERENCES customers (id)
);

CREATE TABLE transactions (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    account_id  BIGINT        NOT NULL,
    amount_cents BIGINT       NOT NULL,
    type        VARCHAR(16)   NOT NULL,
    description VARCHAR(500),
    created_at  TIMESTAMP     NOT NULL,
    CONSTRAINT fk_transactions_account FOREIGN KEY (account_id) REFERENCES accounts (id)
);

CREATE TABLE transfers (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    from_account_id BIGINT      NOT NULL,
    to_account_id   BIGINT      NOT NULL,
    amount_cents    BIGINT      NOT NULL,
    status          VARCHAR(32) NOT NULL,
    created_at      TIMESTAMP   NOT NULL,
    CONSTRAINT fk_transfers_from FOREIGN KEY (from_account_id) REFERENCES accounts (id),
    CONSTRAINT fk_transfers_to   FOREIGN KEY (to_account_id)   REFERENCES accounts (id)
);

CREATE TABLE compliance_holds (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    customer_id BIGINT       NOT NULL,
    reason      VARCHAR(500) NOT NULL,
    status      VARCHAR(32)  NOT NULL,
    created_at  TIMESTAMP    NOT NULL,
    released_at TIMESTAMP,
    CONSTRAINT fk_holds_customer FOREIGN KEY (customer_id) REFERENCES customers (id)
);
